add DeleteNoteController, GetNoteController, GetListNotesController
