# src/main/java/ru/nkashlev/notes/controllers/DeleteNoteController.java
@@ -4,22 +4,19 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import ru.nkashlev.notes.api.UpdateNoteApi;
-import ru.nkashlev.notes.model.NoteDTO;
+import ru.nkashlev.notes.api.DeleteNoteApi;
 import ru.nkashlev.notes.service.NoteService;
 
 @RequiredArgsConstructor
 @RestController
-public class UpdateNoteController implements UpdateNoteApi {
+public class DeleteNoteController implements DeleteNoteApi {
 
     private final NoteService noteService;
-
     @SneakyThrows
     @Override
-    public ResponseEntity<Void> updateNote( @PathVariable("note_id") Long noteId, @RequestBody NoteDTO noteRequestDTO) {
-        noteService.updateNote(noteId, noteRequestDTO);
+    public ResponseEntity<Void> deleteNote(@PathVariable("note_id") Long noteId) {
+        noteService.deleteNoteById(noteId);
         return ResponseEntity.ok().build();
     }
 }
