# src/main/java/ru/nkashlev/notes/controllers/GetListNotesController.java
@@ -2,24 +2,21 @@ package ru.nkashlev.notes.controllers;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import ru.nkashlev.notes.api.CreateNoteApi;
+import ru.nkashlev.notes.api.GetNotesApi;
+
 import ru.nkashlev.notes.model.NoteDTO;
 import ru.nkashlev.notes.service.NoteService;
 
+import java.util.List;
 
 @RequiredArgsConstructor
 @RestController
-public class CreateNoteController implements CreateNoteApi {
-
+public class GetListNotesController implements GetNotesApi {
     private final NoteService noteService;
 
     @Override
-    public ResponseEntity<Void> createNote(@RequestBody NoteDTO noteRequestDTO) {
-        noteService.createNewNote(noteRequestDTO);
-        return ResponseEntity.ok().build();
+    public ResponseEntity<List<NoteDTO>> getNotes() {
+        return ResponseEntity.ok(noteService.getListNotes());
     }
 }
-
-
