# src/main/java/ru/nkashlev/notes/controllers/GetNoteController.java
@@ -4,22 +4,20 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import ru.nkashlev.notes.api.UpdateNoteApi;
+import ru.nkashlev.notes.api.GetNoteApi;
 import ru.nkashlev.notes.model.NoteDTO;
 import ru.nkashlev.notes.service.NoteService;
 
 @RequiredArgsConstructor
 @RestController
-public class UpdateNoteController implements UpdateNoteApi {
+public class GetNoteController implements GetNoteApi {
 
     private final NoteService noteService;
 
     @SneakyThrows
     @Override
-    public ResponseEntity<Void> updateNote( @PathVariable("note_id") Long noteId, @RequestBody NoteDTO noteRequestDTO) {
-        noteService.updateNote(noteId, noteRequestDTO);
-        return ResponseEntity.ok().build();
+    public ResponseEntity<NoteDTO> getNote(@PathVariable("note_id") Long noteId) {
+        return ResponseEntity.ok(noteService.getNoteById(noteId));
     }
 }
